tests/valid_seq/module_e.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module module_e.
:- interface.

:- use_module io.
:- mode e == out.
